# kaaj-mvp

./: .env.example  .gitignore  DECISIONS.md  IMPLEMENTATION_PLAN.md  PR_PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 002_create_domain_models.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  applications.py  lenders.py
backend/app/core/: __init__.py  config.py  database.py  hatchet.py
backend/app/models/: __init__.py  application.py  base.py  business.py  business_credit.py  guarantor.py  lender.py  match_result.py
backend/app/policies/: __init__.py  loader.py  schema.py
backend/app/policies/lenders/: _template.yaml  advantage_plus.yaml  apex_commercial.yaml  citizens_bank.yaml  falcon_equipment.yaml  stearns_bank.yaml
backend/app/rules/: __init__.py  base.py  context_builder.py  engine.py  registry.py
backend/app/rules/criteria/: __init__.py  business.py  credit_history.py  credit_score.py  equipment.py  geographic.py  industry.py  loan_amount.py  transaction.py
backend/app/schemas/: __init__.py  api.py  application.py  business.py  common.py  guarantor.py  lender.py  matching.py
backend/app/services/: __init__.py  application_db_manager.py  matching_service.py
backend/app/workflows/: __init__.py  evaluation.py  triggers.py
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: __init__.py  test_full_flow.py
backend/tests/integration/: test_matching_service.py
backend/tests/unit/api/: test_applications.py  test_lenders.py
backend/tests/unit/core/: test_config.py  test_database.py
backend/tests/unit/models/: test_application.py  test_business.py  test_business_credit.py  test_guarantor.py  test_lender.py  test_match_result.py
backend/tests/unit/policies/: __init__.py  test_lender_policies.py  test_loader.py  test_schema.py
docker/: init-db.sh
(+90 files in other folders)
